# roux

./: .gitignore  Cargo.toml  codecov.yml  deny.toml
.beads/: metadata.json
.config/: nextest.toml
.githooks/: pre-commit
.github/workflows/: ci.yaml
.roux/: db.sqlite
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/embed/: candle.rs  mod.rs
src/extract/: godoc.rs  griffe.rs  html.rs  markdown.rs  mod.rs  openapi.rs  perl.rs  rustdoc.rs  treesitter.rs  typescript.rs
src/graph/: extract.rs  mod.rs  rank.rs  store.rs  tags.rs
src/model/: mod.rs
src/query/: mod.rs
src/source/: crate_download.rs  mod.rs
src/store/: mod.rs  sqlite.rs
tests/: bench_retrieval.rs  embed_integration.rs  self_test.rs
