[package]
name = "roux-cli"
version = "0.0.1"
edition = "2024"
rust-version = "1.88.0"
description = "Graph-native code retrieval — the base layer for agentic reasoning."
license = "MIT OR Apache-2.0"
repository = "https://github.com/iicky/roux"
keywords = ["code-search", "graph", "tree-sitter", "rag", "ai"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["CLAUDE.md", "AGENTS.md", "SPEC.md", ".beads/"]

[[bin]]
name = "roux"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Storage
rusqlite = { version = "0.34", features = ["bundled", "blob"] }

# Hashing
blake3 = "1"

# HTTP (for crate downloads)
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Paths
dirs = "6"

# Error handling
anyhow = "1"

# Archive extraction (for crate downloads)
flate2 = "1"
tar = "0.4"
tempfile = "3"

# Tree-sitter (core + grammars)
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-cpp = "0.23"
tree-sitter-bash = "0.25"

# Graph algorithms
petgraph = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
